argocd/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: argocd.telman.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
           name: argocd-server
           port:
             name: https
  tls:
  - hosts:
    - argocd.telman.io
    secretName: argo-ssl
